EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/31/2010==
Trevius: Exported new BoolNPCSpecAtks() to Perl::Mob.  This can be used to check if an NPC has certain special attacks set.
Derision: Added support for purchasing from Discord Merchant (Class 59).
Derision: Added support for purchasing from Norrath's Keepers and Dark Reign Merchants (Classes 67 and 68).
Derision: Added commands #setpvppoints <amount> and #setcrystals <radiant|ebon> <amount>
Derision: EVENT_POPUPRESPONSE is now passed to player.pl

==01/30/2010==
cybernine186: Implemented the #suspend command.

REQUIRED SQL:

ALTER TABLE `account` ADD `suspendeduntil` DATETIME NOT NULL;

==01/28/2010==
gaeorn: added EQEmuLoginServer/EQCryptoAPI.h (contents from a EQEmu forum post by KLS)

==01/28/2010==
Rabayn: Fixed reference to freed memory in Doors::HandleClick.
Derision: Anti Kill-Stealing fix.

==01/27/2010==
Trevius: Suspend Minion AA now requires level 62 or greater to use it.
Secrets: Implemented quest::voicetell(PlayerName, MacroNumber, RaceNumber, GenderNumer).

==01/26/2010==
Trevius: Exported new ProjectileAnim(mob, item_id, [IsArrow?, speed, angle, tilt, arc]) command to perl::mob.
Trevius: Added the following to perl::NPC - GetSpawnPointX(), GetSpawnPointY(), GetSpawnPointZ(), GetSpawnPointH(), GetGuardPointX(), GetGuardPointY(), and GetGuardPointZ()
Derision: Leadership abilities should now work correctly for groups with 1 Player + Bots.

==01/25/2010==
Trevius: Exported CheckLoSToLoc(x, y, z, [mob_size]) to perl::mob.
Trevius: Exported FindGroundZ(x, y, [z_offset]) to perl::mob.

==01/24/2010==
Trevius: Exported CheckLoS() to perl::mob.
Trevius: Added SoF Decode/Encode for OP_InspectAnswer.  SoF clients can now inspect Titanium clients and everything shows up properly.  SoF clients still cannot be inspected at all by either client.
Derision: Fix for armor not showing to other player's after looting your corpse.